Add question titles and lint Day 6 solution

--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +100,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Day 1\n",
+    "### Day 1: Sonar Sweep\n",
     "Part 1 is to compute the number of times we see an increase between elements. Itertools has a helpful _pairwise_ function that allows comparison between two adjacent elements in a list without making a full copy. Part 2 is to compute a sliding window first.. so I 'adapted' the _pairwise_ function to allow a 3-element sliding window but it's not nicely generalised to different window lengths."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "[1832, 1858]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,14 +173,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Day 2\n",
+    "### Day 2: Dive!\n",
     "\n",
     "For part 1 we don't need to worry about the order of the commands (assuming that we don't need to verify that the depth is always sensible). Brute fore approach for part 2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[1484118, 1463827010]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Day 3\n",
+    "### Day 3: Binary Diagnostic\n",
     "Full brute force today. For part I I'm sure there must be a better way to unpack the most common element from a _Counter_ and to use the two's complement operator to compute epsilon. In part II, there must be a better way to find the most common element with a default.\n",
     "\n",
     "I might revisit  these at a later date."
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "[2724524, 2775870]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,13 +325,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Day 4\n",
+    "### Day 4: Giant Squid\n",
     "I implemented a BingoBoard class on my first attempt here, but decided this was unnecessary when I revisited it. I think my runtime complexity is _O(NDB^2)_ for N boards, B elements per board and D draws because of the _is_bingo_ function, but the input is not that big."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[49860, 24628]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,13 +409,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Day 5\n",
+    "### Day 5: Hydrothermal Venture\n",
     "Part I is to count the number of overlapping points given a set of horizontal / vertical line segments. Pythons _Counter_ again was quite useful to count the number of overlaps. Part II just required an extension to _parse\\_line\\_segments_ to deal with diagonal lines."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "[5167, 17604]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,13 +495,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Day 6\n",
+    "### Day 6: Lanternfish\n",
     "A question about modelling the population size of some fish, given that they reproduce every 6 days (or 8 if they are new), which lends itself nicely to recursion and the _lru\\_cache_. The grid of cached values should be only 8 * 256 for part II."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,42 +510,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "@lru_cache\n",
-    "def func(fish_timer, days):\n",
+    "def population_size(fish_timer, days):\n",
     "    step = min(days, fish_timer+1)\n",
     "    if days == 0:\n",
     "        out = 1\n",
     "    elif days >= fish_timer+1:\n",
-    "        out = func(6, days - fish_timer - 1) + func(8, days - fish_timer - 1)\n",
+    "        out = population_size(6, days - fish_timer - 1) + population_size(8, days - fish_timer - 1)\n",
     "    else:\n",
-    "        out = func(fish_timer - days, 0)\n",
+    "        out = population_size(fish_timer - days, 0)\n",
     "    return out\n",
     "\n",
-    "assert func(3,3) == 1\n",
-    "assert func(3,4) == 2\n",
-    "assert func(3,10) == 2\n",
-    "assert func(3,11) == 3\n",
-    "assert func(3,13) == 4"
+    "assert population_size(3,3) == 1\n",
+    "assert population_size(3,4) == 2\n",
+    "assert population_size(3,10) == 2\n",
+    "assert population_size(3,11) == 3\n",
+    "assert population_size(3,13) == 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def day6_1(fish_timers): return sum(func(x,80) for x in fish_timers)\n",
+    "def day6_1(fish_timers): return sum(population_size(x,80) for x in fish_timers)\n",
     "\n",
-    "def day6_2(fish_timers): return sum(func(x,256) for x in fish_timers)"
+    "def day6_2(fish_timers): return sum(population_size(x,256) for x in fish_timers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "[386755, 1732731810807]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,13 +567,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Day 7\n",
+    "### Day 7: The Treachery of Whales\n",
     "Part I is to compute _min\\_p \\sum\\_i abs(x\\_i - p)_ and part II is to compute _min\\_p \\sum\\_i abs(x\\_i - p) * (abs(x\\_i - p)+1)/2_ for a vector _x_ of initial positions. There is probably a clever way to solve these minimization problems, however the input is not that big so I opted for the brute force approach."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "[351901, 101079875]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "[387, 986034]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
