--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "from __future__  import annotations\n",
     "from collections import Counter, defaultdict, namedtuple, deque\n",
     "from itertools   import permutations, combinations, product, chain, tee\n",
-    "from functools   import lru_cache\n",
+    "from functools   import lru_cache, reduce\n",
     "from typing      import Dict, Tuple, Set, List, Iterator, Optional, Union, NamedTuple\n",
     "\n",
     "import operator\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,16 @@
     "                assert got[-1] == answers[part - 1], (\n",
     "                    f'{fname}(in{day}) got {got[-1]}; expected {answers[part - 1]}')\n",
     "    return got\n",
+    "\n",
+    "Number = Union[float, int]\n",
+    "Atom = Union[Number, str]\n",
+    "Char = str # Type used to indicate a single character\n",
+    "\n",
+    "flatten = chain.from_iterable\n",
+    "\n",
+    "def prod(numbers) -> Number:\n",
+    "    \"The product of an iterable of numbers.\" \n",
+    "    return reduce(operator.mul, numbers, 1)\n",
     "\n",
     "def atoms(text: str, ignore=r'', sep=None) -> Tuple[Union[int, str]]:\n",
     "    \"Parse text into atoms (numbers or strs), possibly ignoring a regex.\"\n",
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +170,7 @@
        "[1832, 1858]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +250,7 @@
        "[1484118, 1463827010]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +322,7 @@
        "[2724524, 2775870]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +406,7 @@
        "[49860, 24628]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +492,7 @@
        "[5167, 17604]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +564,7 @@
        "[386755, 1732731810807]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +622,7 @@
        "[351901, 101079875]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -704,13 +714,96 @@
        "[387, 986034]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "do(8, 387, 986034)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 9: Smoke Basin\n",
+    "Given a heatmap find points which are local minima (part I) and the size of the 'basin' around each minima (part II). My solution to part II was inspired by the expanding bubble used in Dijkstra's algorithm. I also found a use for two additional utility functions from Peter Norveigs 2020 solutions; _flatten_ and _prod_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_ints(line: str) -> List[int]:\n",
+    "    return list(map(int,list(line)))\n",
+    "\n",
+    "in9: List[List[int]] = data(9, parse_ints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_neighbours(grid,x,y):\n",
+    "    out = list()\n",
+    "    out += [(i,y) for i in range(max(0,x-1),min(len(grid),x+2)) if not i == x]\n",
+    "    out += [(x,j) for j in range(max(0,y-1),min(len(grid[0]),y+2)) if not j == y]\n",
+    "    return out\n",
+    "\n",
+    "def is_minima(grid,x,y):\n",
+    "    return all(grid[x][y] < grid[i][j] for i, j in get_neighbours(grid,x,y))\n",
+    "\n",
+    "def day9_1(grid):\n",
+    "    return sum(1+grid[x][y] for x, y in product(range(0,len(grid)),range(0,len(grid[0]))) if is_minima(grid,x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_basin_size(grid,x,y):\n",
+    "    in_basin = [[False for i in range(len(grid[0]))] for j in range(len(grid))]\n",
+    "    pool = {(x,y)}\n",
+    "    while pool:\n",
+    "        i, j = pool.pop()\n",
+    "        in_basin[i][j] = True\n",
+    "        for ii, jj in get_neighbours(grid, i, j):\n",
+    "            if not in_basin[ii][jj] and grid[ii][jj] < 9 and grid[ii][jj] > grid[i][j]:\n",
+    "                pool.add((ii,jj))\n",
+    "    return sum(flatten(in_basin))\n",
+    "\n",
+    "def day9_2(grid):\n",
+    "    minima = [(x,y) for x, y in product(range(0,len(grid)),range(0,len(grid[0]))) if is_minima(grid,x,y)]\n",
+    "    scores = [get_basin_size(grid,x,y) for x,y in minima]\n",
+    "    scores.sort(reverse=True)\n",
+    "    return prod(scores[:3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[600, 987840]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do(9, 600, 987840)"
    ]
   }
  ],
