--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "[1832, 1858]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[1484118, 1463827010]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "[2724524, 2775870]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "[49860, 24628]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "[5167, 17604]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "[386755, 1732731810807]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "[351901, 101079875]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "[387, 986034]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
        "[600, 987840]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -879,13 +879,112 @@
        "[388713, 3539961434]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "do(10, 388713, 3539961434)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 11: Dumbo Octopus\n",
+    "The questions is as follows: consider a 10x10 grid of _Dumbo Octopuses_ which flash once their internal timer reaches a value of ten. The goal is to simulate the behaviour of the grid, and the catch is that when one ocotopus flahes it causes the timer of all neighbouring octupuses to incremement too.\n",
+    "\n",
+    "The interaction between octopuses meant I couldn't see any analytic methods to compute this, so I just simulated the system directly. I haven't found a pythonic way to deal with a 2D grid yet - apart from using nympy which seems like overkill for now. Here I flatten the 2D grid into a 1D vector for convenience."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in11: List[List[int]] = data(11, parse_ints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_neighbours(k,n,m):\n",
+    "    row, col = k//n, k%m\n",
+    "    for i in range(max(0, row-1), min(n, row+2)):\n",
+    "        for j in range(max(0, col-1), min(m, col+2)):\n",
+    "            if i == row and j == col: continue\n",
+    "            yield i*m+j\n",
+    "\n",
+    "assert [x for x in get_neighbours(11,5,5)] == [5, 6, 7, 10, 12, 15, 16, 17]\n",
+    "\n",
+    "def print_grid(grid,n,m):\n",
+    "    lines = [\"\".join(str(x%10) for x in grid[i*m:(i+1)*m]) for i in range(n)]\n",
+    "    print(\"\\n\".join(x for x in lines))\n",
+    "    print(\"\\n\")\n",
+    "\n",
+    "def simulate_step(grid, n, m):\n",
+    "    grid = [x+1 for x in grid]\n",
+    "    queue = [i for i, x in enumerate(grid) if (x//10) > 0]\n",
+    "    done = set(queue)\n",
+    "    while queue:\n",
+    "        for k in get_neighbours(queue.pop(),n,m):\n",
+    "            grid[k] += 1\n",
+    "            if grid[k]//10 > 0 and not k in done:\n",
+    "                queue.append(k)\n",
+    "                done.add(k)\n",
+    "    for k in done:\n",
+    "        grid[k] = 0\n",
+    "    return grid, len(done)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day11_1(grid, days = 100):\n",
+    "    n, m = len(grid), len(grid[0])\n",
+    "    grid = list(flatten(grid))\n",
+    "    count = 0\n",
+    "    for i in range(days):\n",
+    "        grid, v = simulate_step(grid, n, m)\n",
+    "        count += v\n",
+    "    return count\n",
+    "\n",
+    "def day11_2(grid):\n",
+    "    n, m = len(grid), len(grid[0])\n",
+    "    grid = list(flatten(grid))\n",
+    "    v, i = None, 0\n",
+    "    while not v == len(grid):\n",
+    "        grid, v = simulate_step(grid, n, m)\n",
+    "        i += 1\n",
+    "    return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1642, 320]"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do(11, 1642, 320)"
    ]
   }
  ],
