--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -75,7 +75,10 @@
     "    \"Parse text into atoms (numbers or strs), possibly ignoring a regex.\"\n",
     "    if ignore:\n",
     "        text = re.sub(ignore, '', text)\n",
-    "    return tuple(map(atom, text.split(sep)))\n",
+    "    if sep == '':\n",
+    "        return tuple(map(atom, list(text)))\n",
+    "    else:\n",
+    "        return tuple(map(atom, text.split(sep)))\n",
     "\n",
     "def atom(text: str) -> Union[float, int, str]:\n",
     "    \"Parse text into a single float or int or str.\"\n",
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +173,7 @@
        "[1832, 1858]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +253,7 @@
        "[1484118, 1463827010]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +325,7 @@
        "[2724524, 2775870]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +409,7 @@
        "[49860, 24628]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +495,7 @@
        "[5167, 17604]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +567,7 @@
        "[386755, 1732731810807]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +625,7 @@
        "[351901, 101079875]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +717,7 @@
        "[387, 986034]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +800,7 @@
        "[600, 987840]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +882,7 @@
        "[388713, 3539961434]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +981,7 @@
        "[1642, 320]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1077,7 @@
        "[4241, 122134]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,6 +1233,124 @@
    ],
    "source": [
     "do(14, 2010, 2437698971143)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 15: Chiton\n",
+    "The task is to find the shortest path through a grid on nodes with positive weights only. For part I Dijkstra's algorithm was sufficient. \n",
+    "\n",
+    "For part II the grid is much bigger (500\\*500 rather than 100\\*100). I tried prioritising which nodes to visit using the Manhattan distance to the target node as my heuristic function (ie the [A* algorithm](https://en.wikipedia.org/wiki/A*_search_algorithm)) but this doesn't seem to help that much in this case because the Manhattan distance is too low an underestimate of the true path length to the target. Further optimimizations one could try are\n",
+    "- using a priority queue rather than a set for the _active_ variable\n",
+    "- tweaking the heuristic distance funcion\n",
+    "\n",
+    "however this gets the right answer in 3.5 minutes which is sufficient for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in15: List[Atom] = data(15,lambda text: atoms(text,sep=''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_neighbours(pos,n,m):\n",
+    "    x, y = pos\n",
+    "    out = list()\n",
+    "    out += [(i,y) for i in range(max(0,x-1),min(n,x+2)) if not i == x]\n",
+    "    out += [(x,j) for j in range(max(0,y-1),min(m,y+2)) if not j == y]\n",
+    "    return out\n",
+    "\n",
+    "def l1_dist(pos, target):\n",
+    "    return sum(abs(x-y) for x, y in zip(pos,target))\n",
+    "\n",
+    "def find_shortest_path(grid,maxIter=math.inf):\n",
+    "    \"\"\" A* path finding algorithm from top left to bottom right corner\"\"\"\n",
+    "    n, m = len(grid),len(grid[0])\n",
+    "    origin, target = (0,0), (n-1,m-1)\n",
+    "\n",
+    "    Q = {(i,j):math.inf for i, j in product(range(n),range(m))}\n",
+    "    Q[origin], active = 0, {origin}\n",
+    "    dist = dict()\n",
+    "    ii, activeLen = 0, []\n",
+    "    while not target in dist and active and ii < maxIter:\n",
+    "        u = min(active,key = lambda k: Q[k] + l1_dist(k,target)) # Use L1 distance as the A-star heuristic\n",
+    "        dist[u] = Q[u]\n",
+    "        active.remove(u)\n",
+    "        activeLen.append(len(active))\n",
+    "        for i, j in get_neighbours(u,n,m):\n",
+    "            if not (i,j) in dist:\n",
+    "                Q[(i,j)] = min(dist[u]+grid[i][j],Q[(i,j)])\n",
+    "                active.add((i,j))\n",
+    "        ii += 1\n",
+    "    print(\"Paths found to {}/{} nodes (mean size of active set = {})\".format(len(dist),len(Q),sum(activeLen)/len(activeLen)))\n",
+    "    return dist[target]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day15_1(grid):\n",
+    "    return find_shortest_path(grid)\n",
+    "\n",
+    "def increment_line(line: Tuple[int],i: int): return tuple(((x+i -1) % 9)+1 for x in line) \n",
+    "\n",
+    "def increment_grid(grid: List[Tuple[int]],i: int): return [increment_line(line,i) for line in grid]\n",
+    "\n",
+    "def extend_grid(grid,repeat=5):\n",
+    "    extended = [None for i in range(len(grid))]\n",
+    "    for i in range(len(grid)):\n",
+    "        extended[i] = list(chain(*[increment_line(grid[i],j) for j in range(repeat)]))\n",
+    "    extended = list(chain(*[increment_grid(extended,j) for j in range(repeat)]))\n",
+    "    return extended\n",
+    "\n",
+    "assert increment_grid(in15,0) == in15\n",
+    "assert extend_grid([(1,)]) == [tuple(i for i in range(x,x+5)) for x in range(1,1+5)]   \n",
+    "\n",
+    "def day15_2(grid):\n",
+    "    extended_grid = extend_grid(grid,repeat=5)\n",
+    "    return find_shortest_path(extended_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paths found to 10000/10000 nodes (mean size of active set = 137.0399)\n",
+      "Paths found to 249998/250000 nodes (mean size of active set = 793.9157793262347)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[739, 3040]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do(15, 739, 3040)"
    ]
   },
   {
